# llm-redteam-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
probes/: data_exfiltration.yaml  jailbreak.yaml  prompt_injection.yaml  system_prompt_leak.yaml
src/llm_redteam_mcp/: __init__.py  __main__.py  ollama_client.py  probes.py  report.py  scorer.py  server.py
tests/: test_probes.py  test_scorer.py  test_server.py
