[project]
name = "llm-redteam-mcp"
version = "0.1.0"
description = "MCP server for probing the guardrails of locally-owned Ollama LLMs with adversarial prompt tests."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Aeronique", email = "aeronique@proton.me" }]
requires-python = ">=3.12"
keywords = ["mcp", "llm", "red-team", "ollama", "guardrails", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

# Pinned exact versions for reproducible builds. Bump deliberately.
dependencies = [
    "httpx==0.28.1",
    "mcp==1.28.1",
    "pyyaml==6.0.3",
]

[project.scripts]
llm-redteam-mcp = "llm_redteam_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/Aeronique/llm-redteam-mcp"
Repository = "https://github.com/Aeronique/llm-redteam-mcp"

[build-system]
requires = ["uv_build>=0.11.25,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
